--- a/templates/categorylist.mustache
+++ b/templates/categorylist.mustache
@@ -1,4 +1,79 @@
+<div class="row mx-0 border-bottom mb-4" style="height:300px">
+    <div class="col-12 col-md-5 mb-3 px-2 px-lg-2 section-page-top-cont">
+        <div class="row mx-0" style="">
+            <div>
+            <div class=py-3>
+            {{#journallinkbutton}}
+                    <a class="btn btn-outline-primary rounded-0" style="font-size: 25px" href="{{journallinkbutton}}">Visit Journal</a>
+            {{/journallinkbutton}}
+            {{#createcourse}}
+                {{> theme_apoa/buttons/largebutton}}
+            {{/createcourse}}
+            </div>
+            {{{description}}}
+            </div>
+            {{{elibrarysearch}}}
+            
+        </div>
+    </div>
+            <div class="col-12 col-md-7 mb-3 px-0 px-lg-2 section-page-top-cont">
+            {{#toppages}}
+                <h4 class="text-center main-page-section-title pt-2 p-1 px-0 position-relative" style="z-index: 2">
+                                <a class="section_title main-page-link" href="{{{categoryurl}}}">{{categorytitle}}</a>
+                            </h4>
+                    {{^featuredcourse}}
+                        {{#iselibrary}}
+                            <div class="w-100 d-flex justify-content-center align-items-center flex-column section-page-sub-card" style="min-height: 100px">
+                                <div class="row">
+                                    <h4 class="text-primary">{{nocoursemessage}}</h4>
+                                </div>
+                                {{#previousfuture}}
+                                    <div class="row w-100 justify-content-between">
+                                        <a class="text-left" href="{{{previousjournalclubsink}}}" style="max-width:50%">< {{previousjournalclubstext}}</a>
+                                        <a class="text-right" href="{{{futurejournalclubslink}}}" style="max-width:50%">{{futurejournalclubstext}} ></a>
+                                    </div>
+                                {{/previousfuture}}
+                            </div>
+                        {{/iselibrary}}
+                    {{/featuredcourse}}
+                    {{#featuredcourse}}
+                        {{#first}}  
+                            <a class="stretched-link main-page-link-wrapper" href="{{itemurl}}"></a>
+                                <div class="card border-0 pb-0 section-page-sub-card">
+                                    <img class="card-img w-100 d-block section-page-sub-card-img no-border-radius" src="{{itemimg}}">
+                                    <div class="card-img-overlay justify-content-start align-items-end d-flex flex-column">
+                                        <h1 class="d-flex main-page-jumbo-title-cont main-page-link align-items-center w-100 justify-content-end">
+                                            <span class="float-right main-page-jumbo-title d-flex flex-column card-text-over-picture p-2">
+                                                <span class="main-page-link text-right">
+                                                    {{itemtitle}}
+                                                </span>
+                                                <span class="br text-right main-page-link main-page-sub-card-text">
+                                                    {{{itemdescription}}}
+                                                </span>
+                                                <span class="br text-right main-page-sub-card-text">
+                                                    <a class="main-page-link-sub text-white" href="{{{itemcaturl}}}">
+                                                    <small>
+                                                        {{itemcat}}
+                                                    </small>
+                                                    </a>
+                                                </span>
+                                            </span>
+                                        </h1>
+                                    </div>
+                    
+                                </div>
+                                
+                        {{/first}}
+                    {{/featuredcourse}}
+                {{/toppages}}
+        </div>
+</div>
+
+    <h3 class="text-primary text-center text-underline py-2">
+        {{morecategoriestitle}}
+    </h3>
 <div class="row d-flex flex-row">
+
     {{#otherlinks}}
         {{> theme_apoa/coursecard}}
     {{/otherlinks}}
