--- a/templates/mainpage/jumbo/jumbomain.mustache
+++ b/templates/mainpage/jumbo/jumbomain.mustache
@@ -1,48 +1,51 @@
 <a class="stretched-link main-page-link-wrapper" href="{{{jumbourl}}}"></a>
 <div class="card main-page-jumbo-main border-0 pr-lg-1">
-    <video src="{{jumbobanner}}" class="main-page-jumbo-video main-page-main-image d-block" width="" height="315" autoplay="" muted="" loop="" poster="{{jumbobannerposter}}">
+    <video src="{{jumbobanner}}" class="main-page-jumbo-video main-page-main-image {{#jumboshowtext}}dim{{/jumboshowtext}} d-block" width="" height="315" autoplay="" muted="" loop="" poster="{{jumbobannerposter}}">
     </video>
-    <div class="card-img-overlay justify-content-start align-items-center d-flex flex-column">
-        <h1 class="d-flex main-page-jumbo-title-cont main-page-link align-items-center w-100 justify-content-end m-1">
-            <p class="d-flex align-items-center w-100 text-white m-0">
-                <img class="float-left main-page-jumbo-logo" src="{{jumbobannerlogo}}">
-                <span class="main-page-sub-card-text px-2 main-page-jumbo-title-logo-text">
-                        <small>Welcome to the</small><br>
-                        Asia Pacific Othopaedic Association
-                </span>
-            </p>
-            <span class="float-right main-page-jumbo-title d-flex flex-column card-text-over-picture p-2">
-                <span class="main-page-link text-right">
-                    {{jumbotitle}}
-                </span>
-                <span class="br text-right main-page-link main-page-sub-card-text">
-                    {{jumbodescription}}
-                </span>
-                <span class="br text-right main-page-sub-card-text">
-                    <small class="main-page-link-sub">
-                        {{jumbotag}}
-                    </small>
-                </span>
-                <span class="br text-right main-page-sub-card-text">
-                    <small id="jumbotimestart" class="">
-                        {{#userdate}}{{jumbostartdate}}, {{#str}} strftimedate, core_langconfig {{/str}}{{/userdate}}
-                    </small>
-                </span>
-                {{^jumbovideoflag}}
-                    {{#jumboannouncement}}
-                        <div class="my-2" style="background:#fae808; z-index:4">
-                            <a href="{{{announcementlink}}}" >
-                                <h5 class="px-1 text-accent pb-0">Latest News:</h5>
-                                <h5 class="px-1 text-dark">{{jumboannouncement}}</h5>
-                                <h6><small class="px-1">Read more...</small></p>
-                            </a>
-                        </div>
-                    {{/jumboannouncement}}
-                {{/jumbovideoflag}}
 
-            </span>
-        
-        </h1>
+    <div class="card-img-overlay justify-content-start align-items-center d-flex flex-column jumbo-overlay">
+        {{#jumboshowtext}}
+            <h1 class="d-flex main-page-jumbo-title-cont main-page-link align-items-center w-100 justify-content-end m-1">
+                <p class="d-flex align-items-center w-100 text-white m-0">
+                    <img class="float-left main-page-jumbo-logo" src="{{jumbobannerlogo}}">
+                    <span class="main-page-sub-card-text px-2 main-page-jumbo-title-logo-text">
+                            <small>Welcome to the</small><br>
+                            Asia Pacific Othopaedic Association
+                    </span>
+                </p>
+                <span class="float-right main-page-jumbo-title d-flex flex-column card-text-over-picture p-2">
+                    <span class="main-page-link text-right">
+                        {{jumbotitle}}
+                    </span>
+                    <span class="br text-right main-page-link main-page-sub-card-text">
+                        {{jumbodescription}}
+                    </span>
+                    <span class="br text-right main-page-sub-card-text">
+                        <small class="main-page-link-sub">
+                            {{jumbotag}}
+                        </small>
+                    </span>
+                    <span class="br text-right main-page-sub-card-text">
+                        <small id="jumbotimestart" class="">
+                            {{#userdate}}{{jumbostartdate}}, {{#str}} strftimedate, core_langconfig {{/str}}{{/userdate}}
+                        </small>
+                    </span>
+                    {{^jumbovideoflag}}
+                        {{#jumboannouncement}}
+                            <div class="my-2" style="background:#fae808; z-index:4">
+                                <a href="{{{announcementlink}}}" >
+                                    <h5 class="px-1 text-accent pb-0">Latest News:</h5>
+                                    <h5 class="px-1 text-dark">{{jumboannouncement}}</h5>
+                                    <h6><small class="px-1">Read more...</small></p>
+                                </a>
+                            </div>
+                        {{/jumboannouncement}}
+                    {{/jumbovideoflag}}
+
+                </span>
+            
+            </h1>
+        {{/jumboshowtext}}
         {{#jumbovideoflag}}
         <div class="w-100 d-flex justify-content-end">
             <video class="main-page-jumbo-video main-page-jumbo-sub-video" width="560" height="315" poster="{{jumboSubPlaceholder}}" loop="" muted="" controls="">
@@ -112,6 +115,7 @@
         </div>
         {{/jumbovideoflag}}
     </div>
+
 </div>
 {{#js}}
     require(['jquery', 'theme_apoa/countdown'], function($, Countdown) {
