--- a/templates/mainpage/jumbo/jumbomain.mustache
+++ b/templates/mainpage/jumbo/jumbomain.mustache
@@ -52,7 +52,7 @@
                 <source src="{{jumbovideo}}" type="video/webm">
             </video>
         </div>
-        <div class="row text-center text-white align-content-center m-1 d-lg-flex d-none countdown" style="left:15%!important">
+        <div class="row text-center text-white align-content-center m-1 d-flex countdown" style="left:15%!important">
         
             <div class="col-6 px-1" style="width: 140px">
                 <div class="row m-0 justify-content-center">
@@ -86,7 +86,7 @@
 
         {{/jumbovideoflag}}
         {{^jumbovideoflag}}
-        <div class="row text-center text-white align-content-center m-1 d-lg-flex d-none countdown">
+        <div class="row text-center text-white align-content-center m-1 d-flex countdown">
         
             <div class="col-3 px-1" style="width: 140px">
                 <div class="countdowncont">
