--- a/templates/format_tiles/local/content.mustache
+++ b/templates/format_tiles/local/content.mustache
@@ -186,7 +186,7 @@
         {{/initialsection}}
         {{#editing}}
             {{{pretileaddblockbutton}}}
-            {{{preblockcontent}}}
+            {{{pretileblockcontent}}}
         {{/editing}}
         {{#sections}}
             {{$ format_tiles/local/content/section }}
