--- a/templates/format_tiles/above_tiles.mustache
+++ b/templates/format_tiles/above_tiles.mustache
@@ -56,7 +56,7 @@
 
 </div>
 {{{addblockbutton}}}
-{{{preblockcontent}}}
+{{{pretileblockcontent}}}
 {{^editing}}
     <div id="abovetiles"
          class="{{#has_filter_buttons}}justify-content-between{{/has_filter_buttons}}{{^has_filter_buttons}}justify-content-end{{/has_filter_buttons}} tilestyle-{{tilestyle}}{{^section_zero_show}} section-zero-empty{{/section_zero_show}}">
