fixed tables text styling color

--- a/scss/post.scss
+++ b/scss/post.scss
@@ -445,7 +445,7 @@ body.limitedwidth #page.drawers .footer-popover {
   color: black!important;
 }
 
-.tcell .a{
+.tcell a{
   color: black!important;
 }
 
